<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/top_background_color_1"
    tools:context=".NameFragment">

    <RelativeLayout
        android:id="@+id/groupLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true">

        <TextView
            android:id="@+id/groupName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/group_name"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_below="@id/groupLayout">

        <ImageView
            android:id="@+id/cloudImage"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:contentDescription="@string/cloud_image"
            android:layout_alignParentTop="true"
            android:src="@drawable/cloud" />

        <ImageView
            android:id="@+id/sunImage"
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/sun_image"
            android:src="@drawable/sun" />

        <ImageView
            android:id="@+id/birdsImage"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/birds_image"
            android:src="@drawable/birds"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottomButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/imageLayout"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/startButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/start"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/stopButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/stop"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>